Changelog
=========


2.3.5 (unreleased)
------------------

- Let the task provide the ISendableDocsContainer marker behavior.
  Issue #1568 Dokument aus Aufgabe versenden resp. kopieren
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1568
  [phgross]

- Add check to attachable_documents_vocabulary: which check that all term values are unique.
  [phgross]

- Adjust use of title accessors (decoding), since dexterity update it returns always utf-8.
  Issue #1420 Plone Version und Dexterity Version auf aktuellste Version heben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1420
  [phgross]

- User get_css_class instead of deprecated method: css_class_from_obj/css_class_from_brain
  [eschmutz]


2.3.4 (2012-03-28)
------------------

- Made requests to remote clients more robust in case of conflict errors on the sender side.
  Issue #1455 Mandantenuebergreifende ZA: Remote Views robuster implementieren.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1455
  [jone]

- Fixed the document transporter: allways create inital version (see commit 2a5d3ab).
  Issue #1446 Datei eines Dokuments wird beim Transport einer mandantenuebergreifenden
  Aufgabe nicht kopiert
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1446/
  [phgross]

- Reactivate the set_roles_on_distinct_parent in the localroles setter.
  Because to edit(external_edit) related documents of a task it's necessary to have permissions on the dossier.
  [phgross]


2.3.3 (2012-03-12)
------------------

- Fixed CompleteSuccessorTaskReceiveDelivery View: Fire the addedEvent for every
  copied document, so that it generates a inital version of the document.
  Issue #1446 Datei eines Dokuments wird beim Transport einer mandantenuebergreifenden Aufgabe nicht kopiert
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1446/
  [phgross]


2.3.2 (2012-03-08)
------------------
